ref: unused imports deleted from Category record, immutable list of urls in PetProvider class