@@ -3,14 +3,13 @@ package data.provider.pet;
 import models.pet.Pet;
 import models.pet.Status;
 
-import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Stream;
 
 public class PetProvider {
     private static final int VALID_PET_ID = 300;
     private static final String VALID_PET_NAME = "TestPet";
-    private static final List<String> VALID_URL_LIST = Arrays.asList("https://images.app.goo.gl/Uiw5G8XpK2ZTnNmZ8");
+    private static final List<String> VALID_URL_LIST = List.of("https://images.app.goo.gl/Uiw5G8XpK2ZTnNmZ8");
     private static final Status VALID_PET_STATUS = Status.AVAILABLE;
 
     public static Stream<Pet> singleValidPetProvider() {
